[package]
name = "waterfall-launcher"
version = "1.0.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
follow-redirects = { git = "https://github.com/stevenroose/rust-follow-redirects/", branch = "update-deps" }
hyper-tls = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "3.1.8", features = ["derive"] }

regex = "1.5.4"
flate2 = "1.0.22"
tar = "0.4.37"
chrono = "0.4.19"
termcolor = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "winuser", "shellapi", "impl-default"]}